--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <div class="col-12 text-center">
         <div class="tm-page-header">
           <i class="fas fa-4x fa-chart-bar mr-4"></i>
-          <h1 class="d-inline-block text-uppercase">SRZ Designs</h1>
+          <a class="d-inline-block text-uppercase">SRZ Designs</a>
         </div>
       </div>
     </div>
