--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <div class="col-12 text-center">
         <div class="tm-page-header">
           <i class="fas fa-4x fa-chart-bar mr-4"></i>
-          <a class="d-inline-block text-uppercase">SRZ Designs</a>
+       <a href="https://aj1216.github.io/SrzDesigns/#home" h1 class="d-inline-block text-uppercase"</h1>SRZ Designs</a>
         </div>
       </div>
     </div>
