--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+f<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -26,8 +26,7 @@
       <div class="col-12 text-center">
         <div class="tm-page-header">
           <i class="fas fa-4x fa-chart-bar mr-4"></i>
-       <a href="https://aj1216.github.io/SrzDesigns/#home" h1 class="d-inline-block text-uppercase"</h1>SRZ Designs</a>
-        </div>
+         <h1 class="d-inline-block text-uppercase"</h1>SRZ Designs
       </div>
     </div>
     <!-- navbar -->
